--- a/index.html
+++ b/index.html
@@ -114,28 +114,66 @@
         <h1>Results and Announcments</h1>
         <div class="announcement">
             <div class="icon">&#128073;</div>
-            <div class="content">Higher Secondary School Part-II Annual Examination</div>
+            <div class="content"><a href="#">Higher Secondary School Part-II Annual Examination</a></div>
         </div>
         <div class="announcement">
             <div class="icon">&#128073;</div>
-            <div class="content">Higher Secondary School Part-II Annual Examination</div>
+            <div class="content"><a href="#">Higher Secondary School Part-II Annual Examination</a></div>
         </div>
         <div class="announcement">
             <div class="icon">&#128073;</div>
-            <div class="content">Higher Secondary School Part-II Annual Examination</div>
+            <div class="content"><a href="#">Higher Secondary School Part-II Annual Examination</a></div>
         </div>
         <div class="announcement">
             <div class="icon">&#128073;</div>
-            <div class="content">Higher Secondary School Part-II Annual Examination</div>
+            <div class="content"><a href="#">Higher Secondary School Part-II Annual Examination</a></div>
         </div>
     </div>
 
 
 
+    <!-- Default form contact -->
+    <form class="form-det text-center border border-light p-5" action="#!">
+
+        <p class="h4 mb-4">Contact us</p>
+
+        <div class="row">
+            <div class="col col-sm">
+                <input type="text" class="form-control" placeholder="Full Name" aria-label="First name">
+            </div>
+            <div class="col col-sm-6">
+                <input type="text" class="form-control" placeholder="Phone" aria-label="Last name">
+            </div>
+        </div>
 
 
+        <!-- Subject -->
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Addres" aria-label="First name">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Email" aria-label="Last name">
+            </div>
+        </div>
+
+        <!-- Message -->
+        <div class="form-group">
+            <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3"
+                placeholder="Description"></textarea>
+        </div>
 
 
+        <!-- Send button -->
+        <button class="btn btn-info btn-block" type="submit">Submit</button>
+
+    </form>
+    <!-- Default form contact -->
+
+
+    <footer class="footer">
+        All rights reserved by @BISESukkur
+    </footer>
 
 
 
