--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         <p class="h4 mb-4">Contact us</p>
 
         <div class="row">
-            <div class="col col-sm">
+            <div class="col-sm-12 col-lg-6 mar">
                 <input type="text" class="form-control" placeholder="Full Name" aria-label="First name">
             </div>
-            <div class="col col-sm-6">
+            <div class="col col-sm-6 mar">
                 <input type="text" class="form-control" placeholder="Phone" aria-label="Last name">
             </div>
         </div>
@@ -149,10 +149,10 @@
 
         <!-- Subject -->
         <div class="row">
-            <div class="col">
+            <div class="col-sm-12 col-lg-6 mar">
                 <input type="text" class="form-control" placeholder="Addres" aria-label="First name">
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-lg-6 mar">
                 <input type="text" class="form-control" placeholder="Email" aria-label="Last name">
             </div>
         </div>
@@ -184,6 +184,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+
+    <script src="assets/javascript/script.js"></script>
 </body>
 
 </html>
