--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="assets/images/image 1.png" alt="logo"></a>
-            <button class="navbar-toggler text-bg-primary" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler text-bg-secondary" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -110,7 +110,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="container-1">
         <h1>Results and Announcments</h1>
         <div class="announcement">
             <div class="icon">&#128073;</div>
